# technical_test_250307

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_car_details.py  test_output_log.txt
framework/: Pages.py  utils.py
input_files/: car_input - V5.txt  car_output_partial.txt
