[tool.poetry]
name = "technical_test"
version = "0.1.0"
description = ""
authors = ["Jake Bennett <jgsbennett89@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
selenium = "^4.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.12"
